src/ui/readarr_ui/library/snapshots/managarr__ui__readarr_ui__library__book_details_ui__book_details_ui_tests__tests__snapshot_tests__book_details_renders_BookHistoryDetails_1.snap
---
source: src/ui/readarr_ui/library/book_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
             ╭  Test Book Details  ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮               
             │ Editions │ History │ File │ Manual Search                                                                                             │               
             │───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│               
             │   Source Title ▼                                     Event Type                 Quality              Date                             │               
             │=> Test Source Title                                  grabbed                    EPUB                 2023-05-20 21:29:16 UTC          │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                           ╭───────────────────────────────────  Details  ───────────────────────────────────╮                         │               
             │                           │Source Title: Test Source Title                                                  │                         │               
             │                           │Event Type: grabbed                                                              │                         │               
             │                           │Quality: EPUB                                                                    │                         │               
             │                           │Date: 2023-05-20 21:29:16 UTC                                                    │                         │               
             │                           │Indexer:                                                                         │                         │               
             │                           │NZB Info URL:                                                                    │                         │               
             │                           │Release Group:                                                                   │                         │               
             │                           │Age: 0 days                                                                      │                         │               
             │                           │Published Date: 1970-01-01 00:00:00 UTC                                          │                         │               
             │                           │Download Client:                                                                 │                         │               
             │                           │                                                                                 │                         │               
             │                           │                                                                                 │                         │               
             │                           │                                                                                 │                         │               
             │                           │                                                                                 │                         │               
             │                           │                                                                                 │                         │               
             │                           │                                                                                 │                         │               
             │                           ╰─────────────────────────────────────────────────────────────────────────────────╯                         │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
